# trading_bot

./: .env  .gitignore  TODO  main.py  pyproject.toml  readme.md  trading_model.pkl
bot/: Bot.py  Bybit.py  Logger.py  __init__.py  api.py  logger.py  ml_model.py  test.py  trade_logic.py
tests/: test_bot.py  test_trading_model.py
