[tool.poetry]
name = "bybit-trading-bot"
version = "0.1.0"
description = ""
authors = ["Krushovice <kickstar69@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
ta = "^0.11.0"
pybit = "^5.8.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
